@@ -25,20 +25,21 @@ import eu.europa.ec.edelivery.smp.data.dao.SubresourceDefDao;
 import eu.europa.ec.edelivery.smp.data.enums.DocumentVersionStatusType;
 import eu.europa.ec.edelivery.smp.data.enums.EventSourceType;
 import eu.europa.ec.edelivery.smp.data.model.DBDomain;
-import eu.europa.ec.edelivery.smp.data.model.doc.DBDocument;
-import eu.europa.ec.edelivery.smp.data.model.doc.DBDocumentVersion;
-import eu.europa.ec.edelivery.smp.data.model.doc.DBResource;
-import eu.europa.ec.edelivery.smp.data.model.doc.DBSubresource;
+import eu.europa.ec.edelivery.smp.data.model.doc.*;
 import eu.europa.ec.edelivery.smp.data.model.ext.DBSubresourceDef;
+import eu.europa.ec.edelivery.smp.data.ui.DocumentReferenceInfoRO;
 import eu.europa.ec.edelivery.smp.data.ui.SubresourceRO;
+import eu.europa.ec.edelivery.smp.data.ui.enums.EntityROStatus;
 import eu.europa.ec.edelivery.smp.exceptions.ErrorMessageArgument;
 import eu.europa.ec.edelivery.smp.exceptions.ErrorMessageType;
 import eu.europa.ec.edelivery.smp.exceptions.SMPRuntimeException;
 import eu.europa.ec.edelivery.smp.identifiers.Identifier;
 import eu.europa.ec.edelivery.smp.services.IdentifierService;
+import eu.europa.ec.edelivery.smp.services.SMPExceptionLanguageService;
 import eu.europa.ec.edelivery.smp.services.mail.DocumentMailService;
 import eu.europa.ec.edelivery.smp.services.mail.prop.MailDocumentActionType;
 import eu.europa.ec.edelivery.smp.services.resource.DocumentVersionService;
+import eu.europa.ec.edelivery.smp.utils.LocaleUtils;
 import eu.europa.ec.edelivery.smp.utils.SessionSecurityUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.core.convert.ConversionService;
@@ -68,13 +69,15 @@ public class UISubresourceService {
     private final UIDocumentService uiDocumentService;
     private final ConversionService conversionService;
     private final DocumentMailService documentMailService;
+    private final SMPExceptionLanguageService smpExceptionLanguageService;
 
     public UISubresourceService(SubresourceDao subresourceDao, ResourceDao resourceDao, SubresourceDefDao subresourceDefDao, IdentifierService identifierService,
                                 DocumentDao documentDao,
                                 ConversionService conversionService,
                                 DocumentVersionService documentVersionService,
                                 UIDocumentService uiDocumentService,
-                                DocumentMailService documentMailService
+                                DocumentMailService documentMailService,
+                                SMPExceptionLanguageService smpExceptionLanguageService
     ) {
         this.subresourceDao = subresourceDao;
         this.resourceDao = resourceDao;
@@ -85,13 +88,14 @@ public class UISubresourceService {
         this.documentVersionService = documentVersionService;
         this.uiDocumentService = uiDocumentService;
         this.documentMailService = documentMailService;
+        this.smpExceptionLanguageService = smpExceptionLanguageService;
     }
 
 
     @Transactional
     public List<SubresourceRO> getSubResourcesForResource(Long resourceId) {
         List<DBSubresource> list = this.subresourceDao.getSubResourcesForResourceId(resourceId);
-        return list.stream().map(subresource -> conversionService.convert(subresource, SubresourceRO.class)).collect(Collectors.toList());
+        return list.stream().map(this::convertSubresourceWithReferenceData).toList();
     }
 
     @Transactional
@@ -177,5 +181,26 @@ public class UISubresourceService {
         uiDocumentService.generateDocumentForSubresource(resource, subresource, baos);
         version.setContent(baos.toByteArray());
         return document;
+    }
+
+    private SubresourceRO convertSubresourceWithReferenceData(DBSubresource resource) {
+        SubresourceRO subresourceRO = conversionService.convert(resource, SubresourceRO.class);
+        DBDocumentReferenceData docRefData = subresourceDao.getDocumentReferenceData(resource);
+        if (docRefData != null && subresourceRO != null) {
+            DocumentReferenceInfoRO docRefInfo = new DocumentReferenceInfoRO();
+            docRefInfo.setReferencedByCount(docRefData.getReferencedByCount());
+            docRefInfo.setReferencedDocumentExists(docRefData.getReferencedDocumentId() != null);
+            docRefInfo.setReferenceUrlPath(docRefData.getReferenceUrlPath());
+            docRefInfo.setSharingEnabled(docRefData.isSharingEnabled());
+            subresourceRO.setDocumentReferenceInfo(docRefInfo);
+            if (StringUtils.isNotBlank(docRefData.getReferenceUrlPath()) && docRefData.getReferencedDocumentId() == null) {
+                subresourceRO.setStatus(EntityROStatus.ERROR.getStatusNumber());
+                String currentLocale = LocaleUtils.getCurrentLocale();
+                subresourceRO.setStatusMessage(this.smpExceptionLanguageService
+                        .getMessageTranslation(ErrorMessageType.UI_SUBRESOURCE_INVALID_REFERENCE.getMessageCode(), currentLocale)
+                );
+            }
+        }
+        return subresourceRO;
     }
 }
